@@ -1,7 +1,7 @@
 //This is required as flyway now has a stand alone library for each database rather than being bundled together
 buildscript {
   dependencies {
-    classpath("org.flywaydb:flyway-database-postgresql:10.1.0")
+    classpath("org.flywaydb:flyway-database-postgresql:10.7.1")
   }
 }
 
@@ -10,13 +10,13 @@ plugins {
   id 'checkstyle'
   id 'io.spring.dependency-management' version '1.1.4'
   id 'jacoco'
-  id 'org.springframework.boot' version '3.1.8'
-  id 'org.owasp.dependencycheck' version '9.0.5'
+  id 'org.springframework.boot' version '3.2.2'
+  id 'org.owasp.dependencycheck' version '9.0.9'
   id 'org.sonarqube' version '4.4.1.3373'
   id 'pmd'
-  id 'org.flywaydb.flyway' version '10.1.0'
+  id 'org.flywaydb.flyway' version '10.7.1'
   id 'io.freefair.lombok' version '8.4'
-  id 'org.jetbrains.kotlin.jvm' version '1.9.21'
+  id 'org.jetbrains.kotlin.jvm' version '1.9.22'
 }
 
 apply plugin: 'org.owasp.dependencycheck'
@@ -96,7 +96,7 @@ task smoke(type: Test) {
 
 checkstyle {
   maxWarnings = 0
-  toolVersion = '10.12.5'
+  toolVersion = '10.13.0'
   getConfigDirectory().set(new File(rootDir, 'config/checkstyle'))
 }
 
@@ -180,7 +180,7 @@ dependencyCheck {
 }
 
 ext {
-  reformLoggingVersion = "6.0.1"
+  reformLoggingVersion = "6.1.4"
 }
 
 dependencies {
@@ -189,20 +189,20 @@ dependencies {
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json'
   implementation group: 'com.azure', name: 'azure-storage-blob', version: '12.25.1'
-  implementation group: 'com.jayway.jsonpath', name: 'json-path', version: '2.8.0'
-  implementation group: 'io.hypersistence', name: 'hypersistence-utils-hibernate-62', version: '3.7.0'
+  implementation group: 'com.jayway.jsonpath', name: 'json-path', version: '2.9.0'
+  implementation group: 'io.hypersistence', name: 'hypersistence-utils-hibernate-63', version: '3.7.1'
   implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.3.0'
-  implementation group: 'com.google.guava', name: 'guava', version: '32.1.3-jre'
+  implementation group: 'com.google.guava', name: 'guava', version: '33.0.0-jre'
   implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: reformLoggingVersion
   implementation group: 'com.github.hmcts.java-logging', name: 'logging-appinsights', version: reformLoggingVersion
   implementation group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '7.4'
-  implementation 'com.networknt:json-schema-validator:1.0.83'
-  implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.0'
-  implementation group: 'com.github.hmcts', name: 'pip-data-models', version: '2.1.17'
+  implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.1'
+  implementation group: 'com.github.hmcts', name: 'pip-data-models', version: '2.1.18'
+  implementation 'com.networknt:json-schema-validator:1.3.0'
   implementation 'org.springframework.boot:spring-boot-starter-validation'
   implementation 'org.springframework.boot:spring-boot-starter-jdbc'
   implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-  implementation 'com.azure.spring:spring-cloud-azure-starter-active-directory:5.7.0'
+  implementation 'com.azure.spring:spring-cloud-azure-starter-active-directory:5.8.0'
   implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
   implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
   implementation 'com.opencsv:opencsv:5.9'
@@ -211,8 +211,8 @@ dependencies {
   implementation("com.squareup.okhttp3:okhttp:4.12.0")
 
   // Include Flyway for database migrations
-  implementation group: 'org.flywaydb', name: 'flyway-core', version: '10.1.0'
-  implementation group: 'org.flywaydb', name: 'flyway-database-postgresql', version: '10.1.0'
+  implementation group: 'org.flywaydb', name: 'flyway-core', version: '10.7.1'
+  implementation group: 'org.flywaydb', name: 'flyway-database-postgresql', version: '10.7.1'
 
   // Force upgrade snakeyaml version for CVE-2022-1471
   implementation( group: 'org.yaml', name: 'snakeyaml').version {
@@ -220,8 +220,8 @@ dependencies {
   }
 
   testImplementation("com.squareup.okhttp3:mockwebserver:4.12.0")
-  testImplementation "io.zonky.test:embedded-database-spring-test:2.4.0"
-  testImplementation(platform('org.junit:junit-bom:5.10.1'))
+  testImplementation "io.zonky.test:embedded-database-spring-test:2.5.0"
+  testImplementation(platform('org.junit:junit-bom:5.10.2'))
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', {
     exclude group: 'junit', module: 'junit'
     exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
@@ -229,12 +229,19 @@ dependencies {
   testImplementation group: 'org.springframework.security', name: 'spring-security-test'
   testImplementation group: 'io.github.hakky54', name: 'logcaptor', version: '2.9.2'
   testImplementation group: 'org.apiguardian', name: 'apiguardian-api', version: '1.1.2'
+  testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.4.0', classifier: 'all'
 
   functionalTestImplementation sourceSets.main.runtimeClasspath
   functionalTestImplementation sourceSets.test.runtimeClasspath
 
   smokeTestImplementation sourceSets.main.runtimeClasspath
   smokeTestImplementation sourceSets.test.runtimeClasspath
+}
+
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 bootJar {
